--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <h1>Welcome to Fit bot!</h1>
     <p>Ask Fittie about fitness and get female centered responses.</p>
   </div>
+  <script src="https://bot.orimon.ai/deploy/index.js" tenantId="8ad9dd83-46ae-4eb9-bf88-f6f71252ab89"></script>
 </body>
 </html>
 
